// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store > Context > Column  get item 1`] = `
Object {
  "_id": "item-snapshot-001",
  "listId": 1,
  "listType": "category",
  "page": 1,
  "route": "list",
}
`;

exports[`Store > Context > Column  get item 2`] = `
Object {
  "_id": "item-snapshot-001",
  "listId": 1,
  "listType": "category",
  "page": 1,
  "route": "list",
}
`;

exports[`Store > Context > Column  get item 3`] = `
Object {
  "_id": "item-snapshot-001",
  "listId": 1,
  "listType": "category",
  "page": 1,
  "route": "list",
}
`;

exports[`Store > Context > Column  get item 4`] = `
Object {
  "_id": "item-snapshot-002",
  "listId": 1,
  "listType": "category",
  "page": 2,
  "route": "list",
}
`;

exports[`Store > Context > Column  props are populated appropriately 1`] = `
Object {
  "_id": "column-snapshot-001",
  "items": Array [
    Object {
      "_id": "item-snapshot-001",
      "listId": 1,
      "listType": "category",
      "page": 1,
      "route": "list",
    },
    Object {
      "_id": "item-snapshot-002",
      "listId": 1,
      "listType": "category",
      "page": 2,
      "route": "list",
    },
  ],
  "selected": "item-snapshot-001",
}
`;

exports[`Store > Context > Column  props are populated appropriately 2`] = `
Object {
  "_id": "column-snapshot-002",
  "items": Array [
    Object {
      "_id": "item-snapshot-003",
      "listId": 1,
      "listType": "category",
      "page": 3,
      "route": "list",
    },
  ],
  "selected": "item-snapshot-003",
}
`;
